Make sure intro slider link changes cover on hover; tweak js “breakpoint” for nav collapse;

--- a/web/app/themes/typeforce/assets/styles/pages/_home.scss
+++ b/web/app/themes/typeforce/assets/styles/pages/_home.scss
@@ -50,14 +50,15 @@
       @include media-md {
         margin: 0 0 15px $site-pad-hor-md;
       }
-      &:hover .info {
-        color: $white;
-      }
+
       a{
         @extend %small-caps;
         color: $gray;
         text-decoration: underline;
         transition: color $hover-trans-time;
+        &:hover {
+          color: $white;
+        }
         .highlight{
           background-color: $gray-dark;
           padding: 0.3em;
